--- a/cit230/index.html
+++ b/cit230/index.html
@@ -94,6 +94,9 @@
     </ul>
     <ul>
         <li>Lesson 9:
+        <ul>
+            <li><a href="lesson-9/heroes.html">Heroes</a></li>
+        </ul>
         </li>
     </ul>
         </div>
