home added to page

--- a/cit230/index.html
+++ b/cit230/index.html
@@ -96,6 +96,7 @@
         <li>Lesson 9:
         <ul>
             <li><a href="lesson-9/heroes.html">Heroes</a></li>
+            <li><a href="lesson-9/index.html">Home</a></li>
         </ul>
         </li>
     </ul>
