A lot of Updates

--- a/cit230/lesson-9/index.html
+++ b/cit230/lesson-9/index.html
@@ -18,11 +18,11 @@
       <nav>
       <div class="navContainer">
           <ul id="btn" class="topnav">
-              <li><a class="navFlex-item" href="">Home</a></li>
-              <li><a class="navFlex-item" href="#">Franklin</a></li>
-              <li><a class="navFlex-item" href="#">Geenville</a></li>
+              <li><a class="navFlex-item" href="index.html">Home</a></li>
+              <li><a class="navFlex-item" href="franklin.html">Franklin</a></li>
+              <li><a class="navFlex-item" href="#">Greenville</a></li>
               <li><a class="navFlex-item" href="#">Springfield</a></li>
-              <li><a class="navFlex-item" href="#">Storm Center</a></li>
+              <li><a class="navFlex-item" href="storm.html">Storm Center</a></li>
               <li><a class="navFlex-item" href="gallery.html">Gallery</a></li>
           </ul>
       </div>		
