--- a/cit230/index.html
+++ b/cit230/index.html
@@ -104,7 +104,7 @@
             <ul>
                 <li>Lesson 10:
                     <ul>
-                        <li><a href="../../weatherpage/index.html">Weather page</a></li>
+                        <li><a href="../weather/index.html">Weather page</a></li>
                     </ul>
                 </li>
             </ul>
