--- a/term-website/index.html
+++ b/term-website/index.html
@@ -1,40 +1,90 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="css/standard.css">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/mobile.css">
+    <link rel="stylesheet" href="css/carousel.css">
     <link href="https://fonts.googleapis.com/css?family=Do+Hyeon" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
 </head>
 
 <body>
-    <header>
-      <img src="images/logo.png" alt="logo">
-       <h1>The Mountain Spoke</h1>
-        <div class="container" onclick="myFunction(this)">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
-        </div>
-        <nav class="nav" id="nav">
-            <ul>
-                <li>Home</li>
-                <li>Bikes</li>
-                <li>Tours</li>
-                <li>Events</li>
-                <li>Service</li>
-            </ul>
-        </nav>
+    <header w3-include-html="header.html">
     </header>
     <main>
-       <img src="images/lander-page%20image.jpg" alt="lander" class="lander">
-        <p>Get out on the trails</p>
-    </main>
+        <div class="overlay">
+            <img class="image" src="images/lander-page%20image.jpg" alt="get out on the trails">
+            <div class="middle">
+                <p class="text">Live life with nature</p>
+            </div>
+        </div>
+        <!-- Slideshow container -->
+        <!-------------------------->
+        <!--------------------------->
+        <div class="slideshow-container">
 
+            <!-- Full-width images with number and caption text -->
+            <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <a href="trekbike.html"><img src="images/trekbike.jpg"></a>
+                <div class="text">Trek bike</div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <a href="giantbike.html"><img src="images/gaint%20bike.jpg"></a>
+                <div class="text">Giant Bike</div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <a href="spbike.html"><img src="images/specialized%20bike.jpg"></a>
+                <div class="text">Specialized Bike</div>
+            </div>
+
+            <!-- Next and previous buttons -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <div class="overlay">
+            <img class="image" src="images/bike-trails.jpg" alt="get out on the trails">
+            <div class="middle">
+                <p class="text">The trails are waiting for you!</p>
+            </div>
+        </div>
+        <!----------------------------->
+        <!----------------------------->
+        <!----------------------------->
+        <section>
+            <h3>Events</h3>
+            <article>
+                <h4>Saturday July, 28th</h4>
+                <img src="images/race.jpg" alt="race">
+                <div>
+                    <h5>Bike race</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lorem risus, sollicitudin sit </p>
+                </div>
+            </article>
+            <article>
+                <h4>Sunday July, 29th</h4>
+                <img src="images/article-2.jpg" alt="race">
+                <div>
+                    <h5>Ride the Hills</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lorem risus, sollicitudin sit </p>
+                </div>
+            </article>
+        </section>
+    </main>
+    <footer w3-include-html="footer.html">
+    </footer>
+    <script src="scripts/include.js"></script>
+    <script src="scripts/modularize.js"></script>
+    <script src="scripts/carousel.js"></script>
     <script src="scripts/hamburger.js"></script>
 </body>
 
