finished term site

--- a/term-website/bikes.html
+++ b/term-website/bikes.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>The Spoke | Bikes</title>
     <link rel="stylesheet" href="css/standard.css">
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="css/bikes.css">
+    <link rel="stylesheet" href="css/standard-m.css">
+    <link rel="stylesheet" href="css/bikes-m.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
 </head>
 
@@ -23,8 +25,8 @@
                 </div>
                 <div class="product-info">
                     <h4>Product Description:</h4>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                    <h4>Price: $1,100.00</h4>
+                    <p>With its lightweight ALUXX SL aluminum frame and trail-friendly geometry, Fathom is a great choice for XC terrain and singletrack shredding. It blends the efficient ride quality of a classic hardtail with the can-do capabilities of an all-round off-roader. Engineered to optimize its 27.5 wheel platform, it has trail-friendly geometry including a more relaxed head angle made for a 120mm suspension fork.</p>
+                    <h4><b>Price: $1,100.00</b></h4>
                 </div>
             </div>
         </article>
@@ -36,8 +38,8 @@
                 </div>
                 <div class="product-info">
                     <h4>Product Description:</h4>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                    <h4>Price: $8,200.00</h4>
+                    <p>The concept behind the S-Works Camber Carbon 29 is pretty simple: If speed is your thing, it's the only trail bike you're ever going to need. Essentially, it blends all of the trail bike characteristics that you want with the XC climbing prowess that you need. This is achieved by thoughtfully combining our full FACT carbon fiber Trail Chassis with a carbon Camber FSR rear end. At both ends of the bike, you'll find sufficient travel lengths that deliver plenty of plush suspension—all without going overboard on big hit capability. This means that you don't have to sacrifice efficiency, weight, or sheer speed to ride how you want. And with our Trail 29 Geometry and lightweight, stiff, and smooth Concentric Pivot at the rear, we can guarantee it. The other trail component of the Camber is utility, and along these lines, it features our fully integrated SWAT Door at the down tube of the frame. Open it up, and you're able to safely and securely house your ride essentials right where you want them—on the bike. For the build, we selected components like SRAM XX1 and Shimano XTR brakes that hold nothing back in delivering unadulterated, supreme performance. Add it all up, and you get one bike that can quite literally do it all.</p>
+                    <h4><b>Price: $8,200.00</b></h4>
                 </div>
             </div>
         </article>
@@ -49,8 +51,8 @@
                 </div>
                 <div class="product-info">
                     <h4>Product Description:</h4>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                    <h4>Price: $8,399.99</h4>
+                    <p>Fuel EX 9.9 makes no compromises. A carbon frame, carbon wheels, SRAM's flagship 1x12 drivetrain, and FOX Factory Float suspension make this the one carbon full suspension mountain bike that rules every trail. It's fast on XC singletrack, light on climbs, and stable through the rowdiest terrain you can find.</p>
+                    <h4><b>Price: $8,399.99</b></h4>
                 </div>
             </div>
         </article>
@@ -59,10 +61,9 @@
     <footer w3-include-html="footer.html"></footer>
     <script src="scripts/include.js"></script>
     <script src="scripts/modularize.js"></script>
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/bikes.js"></script>
+    <script src="scripts/wayfinder.js"></script>
 </body>
 
 </html>
