--- a/term-website/events.html
+++ b/term-website/events.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="css/">
     <link rel="stylesheet" href="css/events.css">
+    <link rel="stylesheet" href="css/standard-m.css">
+    <link rel="stylesheet" href="css/events-m.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
 </head>
 
@@ -15,17 +17,29 @@
    <header w3-include-html="header.html"></header>
    <main>
        <h3>Upcoming events: </h3>
-       <article class="event">
+       <article>
            <h4>Friday July, 27th</h4>
            <h3>Down-hill race</h3>
            <img src="images/event2.jpg" alt="down-hill biking">
-           <p>The down-hill race will take place in lavendar park this friday the 27th, contestants have to pay a $10 fee to enter and the winner wins $500. <a href="form.html">Register Here</a></p>
+           <p>The down-hill race will take place in lavendar park this friday the 27th, contestants have to pay a $10 fee to enter and the winner wins $500. <a href="form.html" target="_blank">Register Here</a></p>
        </article>
-       
+       <article>
+           <h4>Saturday July, 28th</h4>
+           <h3>Bike race</h3>
+           <img src="images/race.jpg" alt="Bike race">
+           <p>There will be a bike race held in town to raise money for the charity of the winners choice. it will be held from 10am-12pm, we look forward to seeing you there!</p>
+       </article>
+       <article>
+           <h4>Sunday July, 29th</h4>
+           <h3>Ride the hills</h3>
+           <img src="images/article-2.jpg" alt="Bike race">
+           <p>We will be sponsoring a down-hill joy-ride this Sunday July 29th, all are welcome to come!</p>
+       </article>
    </main>
    <footer w3-include-html="footer.html"></footer>
     <script src="scripts/include.js"></script>
     <script src="scripts/modularize.js"></script>
     <script src="scripts/hamburger.js"></script>
+    <script src="scripts/wayfinder.js"></script>
 </body>
 </html>
