--- a/term-website/footer.html
+++ b/term-website/footer.html
@@ -5,4 +5,6 @@
             <li><i class="fab fa-twitter-square"></i><a href="twitter.com">Twitter</a></li>
             <li><i class="fab fa-instagram"></i><a href="instagram.com">Instagram</a></li>
         </ul>
+        <p>The Mountian Spoke (406)-555-BIKE 3950 Valley Commons Drive Bozeman, MT, US 59718</p>
+        <p>&copy;2018 | All Rights Reserved | The Mountian Spoke</p>
     </footer>
