--- a/term-website/index.html
+++ b/term-website/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="css/carousel.css">
+    <link rel="stylesheet" href="css/standard-m.css">
+    <link rel="stylesheet" href="css/home-m.css">
     <link href="https://fonts.googleapis.com/css?family=Do+Hyeon" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
 </head>
@@ -20,30 +22,30 @@
         <div class="overlay">
             <img class="image" src="images/lander-page%20image.jpg" alt="get out on the trails">
             <div class="middle">
-                <p class="text">Live life with nature</p>
+                <p class="text">Live life in nature</p>
             </div>
         </div>
         <!-- Slideshow container -->
         <!-------------------------->
         <!--------------------------->
-        <div class="slideshow-container">
+        <div class="slideshow-container overlay">
 
             <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
-                <a href="trekbike.html"><img src="images/trekbike.jpg"></a>
+                <a href="bikes.html"><img src="images/trekbike.jpg"></a>
                 <div class="text">Trek bike</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
-                <a href="giantbike.html"><img src="images/gaint%20bike.jpg"></a>
+                <a href="bikes.html"><img src="images/gaint%20bike.jpg"></a>
                 <div class="text">Giant Bike</div>
             </div>
 
             <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
-                <a href="spbike.html"><img src="images/specialized%20bike.jpg"></a>
+                <a href="bikes.html"><img src="images/specialized%20bike.jpg"></a>
                 <div class="text">Specialized Bike</div>
             </div>
 
@@ -52,7 +54,7 @@
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
         <div class="overlay">
-            <img class="image" src="images/bike-trails.jpg" alt="get out on the trails">
+            <a href="tours.html"><img class="image" src="images/bike-trails.jpg" alt="get out on the trails"></a>
             <div class="middle">
                 <p class="text">The trails are waiting for you!</p>
             </div>
@@ -67,7 +69,7 @@
                 <img src="images/race.jpg" alt="race">
                 <div>
                     <h5>Bike race</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lorem risus, sollicitudin sit </p>
+                    <p>There will be a bike race held in town to raise money for the charity of the winners choice. it will be held from 10am-12pm, we look forward to seeing you there!</p>
                 </div>
             </article>
             <article>
@@ -75,7 +77,7 @@
                 <img src="images/article-2.jpg" alt="race">
                 <div>
                     <h5>Ride the Hills</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lorem risus, sollicitudin sit </p>
+                    <p>We will be sponsoring a down-hill joy-ride this Sunday July 29th, all are welcome to come. We will be meeting at 8am and going till 10am, come prepared to have some fun!</p>
                 </div>
             </article>
         </section>
@@ -86,6 +88,7 @@
     <script src="scripts/modularize.js"></script>
     <script src="scripts/carousel.js"></script>
     <script src="scripts/hamburger.js"></script>
+    <script src="scripts/wayfinder.js"></script>
 </body>
 
 </html>
