--- a/term-website/tours.html
+++ b/term-website/tours.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/standard.css">
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="css/tours.css">
+    <link rel="stylesheet" href="css/standard-m.css">
+    <link rel="stylesheet" href="css/tours-m.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
 </head>
 
@@ -17,20 +19,21 @@
            <h3>Outback bike ride</h3>
            <img src="images/event1.jpg" alt="outback">
            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, </p>
-           <p>price: $1,200</p>
-           <button><a href="form.html">Register</a></button>
+           <p>price: $15</p>
+           <div class="btn"><a href="form.html" target="_blank">Register</a></div>
        </article>
        <article>
            <h3>Downhill race</h3>
            <img src="images/event2.jpg" alt="downhill">
            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, </p>
            <p>price: $10</p>
-           <button><a href="form.html">Register</a></button>
+           <div class="btn"><a href="form.html" target="_blank">Register</a></div>
        </article>
    </main>
    <footer w3-include-html="footer.html"></footer>
     <script src="scripts/include.js"></script>
     <script src="scripts/modularize.js"></script>
     <script src="scripts/hamburger.js"></script>
+    <script src="scripts/wayfinder.js"></script>
 </body>
 </html>
