--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div class="content-wrap">
     <h2>CIT 270</h2>
     <p>Go to school page for lesson links</p>
+    <a href="js13k-2018-master/index.js">Game</a>
 </body>
 <footer>
    <h2>Let's keep in touch</h2>
